# devcontainer-features

./: .gitignore  README.md  renovate.json
.devcontainer/: auto-secrets-manager  devcontainer.json
.github/workflows/: ci.yaml
.zed/: settings.json
auto-secrets-manager/: README.md  devcontainer-feature.json  install.sh  pytest.ini  run_ci.sh  run_tests.sh
auto-secrets-manager/devcontainer-feature/: devcontainer-feature.json  install.sh
auto-secrets-manager/docs/: configuration.md  development.md  git-hooks.md  secret-managers.md
auto-secrets-manager/reports/: test_report.txt
auto-secrets-manager/src/: pyproject.toml  requirements.txt  setup.py
auto-secrets-manager/src/auto_secrets/: __init__.py  cli.py  daemon.py  logging_config.py
auto-secrets-manager/src/auto_secrets/core/: __init__.py  branch_manager.py  cache_manager.py  config.py  environment.py  utils.py
auto-secrets-manager/src/auto_secrets/secret_managers/: __init__.py  base.py  infisical.py
auto-secrets-manager/src/shell/: auto-commands.sh  bash-integration.sh  branch-detection.sh  zsh-integration.sh
auto-secrets-manager/src/tests/: test_branch_manager.py  test_cache_manager.py  test_cli.py  test_config.py  test_infisical_manager.py  test_logging_config.py  test_secret_manager_base.py  test_secret_managers_init.py  test_utils.py
auto-secrets-manager/tests/: test_branch_manager.py  test_cache_manager.py  test_cli.py  test_config.py  test_environment.py  test_infisical_manager.py  test_logging_config.py  test_secret_manager_base.py  test_utils.py
src/auto-secrets/: IMPLEMENTATION.md  PLAN.md  README.md  devcontainer-feature.json  install.sh
src/auto-secrets-manager/: README.md  devcontainer-feature.json  install.sh  run_ci.sh
src/auto-secrets-manager/docs/: architecture.md  configuration.md  performance.md  roadmap.md  secret-managers.md  security.md  troubleshooting.md
src/auto-secrets-manager/src/: pyproject.toml
src/auto-secrets-manager/src/auto_secrets/: __init__.py  cli.py  daemon.py  key_master.py  key_master_config.py  logging_config.py  monitored_process.py  supervisor.py
src/auto-secrets-manager/src/auto_secrets/core/: __init__.py  cache_manager.py  common_utils.py  config.py  crypto_utils.py  key_retriever.py  process_utils.py  singleton.py
src/auto-secrets-manager/src/auto_secrets/managers/: __init__.py  app_manager.py  branch_manager.py  cache_manager.py  common_config.py  log_manager.py
src/auto-secrets-manager/src/auto_secrets/secret_managers/: __init__.py  base.py  factory.py  infisical.py
src/auto-secrets-manager/src/hooks/: post-checkout
src/auto-secrets-manager/src/shell/: auto-commands.sh  branch-detection.sh  secret-writer.sh
src/auto-secrets-manager/src/tests/: test_app_manager.py  test_branch_manager.py  test_cache_manager.py  test_cli.py  test_common_config.py  test_common_utils.py  test_config.py  test_crypto_utils.py  test_daemon.py  test_infisical_manager.py  test_infisical_secret_manager.py  test_key_master.py  test_key_master_config.py  test_key_retriever.py  test_log_manager.py  test_logging_config.py  test_process_utils.py  test_secret_manager_base.py  test_secret_manager_factory.py  test_secret_managers_init.py  test_singleton_meta.py  test_supervisor.py
src/auto-secrets/core/: branch-detection.sh  cache.sh  environment-mapping.sh  permissions.sh
src/auto-secrets/secret-managers/: aws-secrets.sh  azure-keyvault.sh  bitwarden.sh  config.sh  gcp-secrets.sh  infisical.sh  manager-interface.sh  vault.sh
src/auto-secrets/shells/: bash-integration.sh  common-shell.sh  zsh-integration.sh
src/auto-secrets/templates/: init.template.sh  secret-manager-config.template.sh  shell-config.template.sh
src/auto-secrets/utils/: cleanup.sh  config-parser.sh  logging.sh  validation.sh
test/auto-secrets-manager/: auto-secrets-manager-test-basic.sh  scenarios.json
